@@ -1,3 +1,3 @@
 #ifndef KPPPVERSION
-#define KPPPVERSION "1.5.23 (Release 159)"
+#define KPPPVERSION "1.5.24 (Release 160)"
 #endif
